fix filter by alignment

--- a/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dashboard.datasets.scss
@@ -68,11 +68,7 @@
     border-bottom: 1px solid $ddd;
 
     .filters {
-        float: left;
-        text-align: right;
-        margin: 0;
-        position: relative;
-        padding: 0 10px;
+        float: right;
         @media (min-width: 1080px) {
             margin-left: 60px;
         }
@@ -87,8 +83,10 @@
         }
         button {
             @extend %btn-filter;
+            padding: 10px 20px;
             border: 1px solid #c2c2c2;
             border-width: 0 1px;
+            border-right: none;
 
             &.filter-all {
                 //text-transform: uppercase;
@@ -155,14 +153,13 @@
             font-size: 10px;
             font-weight: 600;
             color: $c-77;
-            text-align: right;
             float: left;
-            padding: 10px 10px 10px 10px;
+            padding: 11px 10px 10px 10px;
         }
 
         a {
             @extend %btn-sort;
-
+            padding: 11px 20px;
             &.name,
             &.date {
                 border: 1px solid $c2;
